# ChangeLog for net-libs/webkitgtk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Apr 2008; Markus Ullmann <jokey@gentoo.org> +webkitgtk-31535.ebuild:
  Version bump

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org> -webkitgtk-31275.ebuild,
  +webkitgtk-31370.ebuild:
  Version bump per hanno's request

  25 Mar 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  -webkitgtk-31224.ebuild:
  Removed old r31224.

  25 Mar 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> ++:
  Bug 190347. Updated ebuild for nightly build r31275

  22 Mar 2008; Tiziano Müller <dev-zero@gentoo.org>
  -webkitgtk-30468.ebuild, +webkitgtk-31224.ebuild:
  Version bump.

  23 Feb 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> 
  webkitgtk-30468.ebuild, -webkitgtk-30267.ebuild:
  Bug 190347. New ebuild for WebKit r30468 nightly build.

  15 Feb 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> 
  +webkitgtk-30267.ebuild, -webkitgtk-29487.ebuild:
  New ebuild for new nightly build

  18 Jan 2008; (Tommy[D]) tommy100@gmx.de webkitgtk-29487.ebuild:
  Reorder KEYWORDS

  16 Jan 2008; (Tommy[D]) tommy100@gmx.de -webkitgtk-29438.ebuild:
  Drop old one

  15 Jan 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  +webkitgtk-29487.ebuild:
  New EBuild. Remove automake --add-missing since bug 205606

  13 Jan 2008; Jakub Moc <jakub@gentoo.org> -webkitgtk-29336.ebuild,
  webkitgtk-29438.ebuild:
  Nuke old and add a comment on bad autotools usage

  13 Jan 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  +webkitgtk-29438.ebuild:
  New EBuild for r29438 nightly build

  09 Jan 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> +metadata.xml,
  +webkitgtk-29336.ebuild:
  New EBuild for bug 190347 thanks to Joonas, Dale, genstef and helch
