@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Apr 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
+  -webkitgtk-31370.ebuild, webkitgtk-31535.ebuild:
+  Fix SVG compilation
+
   02 Apr 2008; Markus Ullmann <jokey@gentoo.org> +webkitgtk-31535.ebuild:
   Version bump
 
